--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "组合数学学习笔记"
-subtitle: "排列组合"
+subtitle: "排列组合 母函数与递推关系"
 date: 2025-2-4
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -26,7 +26,7 @@ words:
   - 题解：卢卡斯定理/Lucas 定理
 ---
 
-> [参考资料](/file/2025/02/组合数学25年竞赛.zip) [参考资料](/file/2025/02/组合数学修订.zip) [参考资料](/file/2025/02/数学.pdf)
+> [参考资料](/file/2025/02/组合数学25年竞赛.zip) [参考资料](/file/2025/02/组合数学修订.zip) [参考资料](/file/2025/02/数学.pdf) [参考资料](/file/2025/02/母函数.pdf)
 
 # 排列与组合
 
@@ -328,6 +328,7 @@ $$
 定义数组 $c$，$c_i$ 表示 $i$ 关于 $n!$ 的重数。
 
 那么就有：
+
 $$
 \large c_i=\left\lfloor\frac np\right\rfloor
 +\left\lfloor\frac n{p^2}\right\rfloor
@@ -335,6 +336,7 @@ $$
 +\cdots
 +\left\lfloor\frac n{p^{\lfloor\log_p n\rfloor}}\right\rfloor
 $$
+
 处理时，操作 $c_i$ 即可。
 
 最终答案即 $\sum\limits_{i=1}^kc_i\times i$。
@@ -371,53 +373,60 @@ $$
 
 ### 二项式推论
 
-* $$
-  \binom{n}{0}+\binom{n}{1}+\binom{n}{2}+\cdots+\binom{n}{n}=\sum_{i=0}^n\binom{n}{i}=2^n
-  $$
+1. $$
+    \binom{n}{0}+\binom{n}{1}+\binom{n}{2}+\cdots+\binom{n}{n}=\sum_{i=0}^n\binom{n}{i}=2^n
+   $$
+    取 $a=b=1$ 代入即可。
 
-  取 $a=b=1$ 代入即可。
+***
 
-* $$
-  \sum_{i=0}^n(-1)^i\binom{n}{i}=[n=0]
-  $$
+2. $$
+    \sum_{i=0}^n(-1)^i\binom{n}{i}=[n=0]
+   $$
 
   其中 $[n=0]$ 为**艾弗森括号**，表示条件是否成立，$n=0$ 成立时为 $1$，否则为 $0$。
 
   令 $a=1,b=-1$ 即可。
 
-* $$
-  \sum_{i=0}^ni\binom{n}{i}=n\times 2^{n-1}
-  $$
+***
 
-  令 $a=x,b=1$，两边求导后有 $x=1$。
+3. $$
+    \sum_{i=0}^ni\binom{n}{i}=n\times 2^{n-1}
+   $$
+    令 $a=x,b=1$，两边求导后有 $x=1$。
 
   ~~虽然我并不会求导。~~
 
-* $$
-  \sum_{i=0}^ni^2\binom{n}{i}=n(n+1)2^{n-2}
-  $$
+***
+
+4. $$
+    \sum_{i=0}^ni^2\binom{n}{i}=n(n+1)2^{n-2}
+   $$
 
   同上。
 
   ~~显然我还是不会证明。~~
 
-* $$
-  \sum_{i=0}^m\binom{n}{i}\binom{m}{k-i}=\binom{m+n}{k}
-  $$
+***
 
-  **范德蒙恒等式**。
+5. $$
+    \sum_{i=0}^m\binom{n}{i}\binom{m}{k-i}=\binom{m+n}{k}
+   $$
+    **范德蒙德恒等式**。
 
   代入组合数计算公式展开可证。
 
   其推论：
-  $$
-  \sum_{i=0}^n\binom{n}{i}^2=\binom{2n}{n}
-  $$
+$$
+   \sum_{i=0}^n\binom{n}{i}^2=\binom{2n}{n}
+$$
   令 $n=k=m$ 即可。
 
-* $$
-  \sum_{i=0}^n\binom{i}{k}=\binom{n+1}{k+1}
-  $$
+***
+
+6. $$
+   \sum_{i=0}^n\binom{i}{k}=\binom{n+1}{k+1}
+   $$
 
   **朱世杰恒等式**。
 
@@ -425,27 +434,39 @@ $$
 
   ~~我还是不会。~~
 
-* $$
-  \binom{n}{r}\binom{r}{k}=\binom{n}{k}\binom{n-k}{r-k}
-  $$
+***
 
-  代入公式展开可证。
+7. $$
+    \binom{n}{r}\binom{r}{k}=\binom{n}{k}\binom{n-k}{r-k}
+   $$
+    代入公式展开可证。
 
-* $$
-  \sum_{i=0}^n\binom{n-i}{i}=F_{n+1}
-  $$
+***
 
-   $F$ 为**斐波那契数列**。
+8. $$
+    \sum_{i=0}^n\binom{n-i}{i}=F_{n+1}
+   $$
 
-  ~~不会证。~~
+   $F$ 为**斐波那契数列**，第一项为 $F_0=0$。
+   
+    ~~不会证。~~
 
-* $$
-  \binom{n+k}{k}^2=\sum_{j=0}^k\binom{k}{j}^2\binom{n+2k-j}{2k}
-  $$
+***
 
-  通过范德蒙恒等式可证，被称为**李善兰恒等式**。
+9. $$
+    \binom{n+k}{k}^2=\sum_{j=0}^k\binom{k}{j}^2\binom{n+2k-j}{2k}
+   $$
+    通过范德蒙恒等式可证，被称为**李善兰恒等式**。
+   
+     ~~还是不会证。~~
+   
+   ***
+   
+10. $$
+    \sum_{n=0}^\infty\binom{m}{n}x^n=(1+x)^m
+    $$
 
-  ~~还是不会证。~~
+    多用于[求解生成函数的封闭形式](#求解生成函数的封闭形式)。通过二项式定理带入 $a=x,b=1$ 即可得证。
 
 ## 卢卡斯定理 Lucas 定理
 
@@ -533,7 +554,7 @@ $$
 参考代码：
 
 ```cpp
-#include<bits/stdc++.h>
+//#include<bits/stdc++.h>
 #include<algorithm>
 #include<iostream>
 #include<cstring>
@@ -609,7 +630,7 @@ a_k&\equiv \binom{n}{m}\pmod{p_k^{c_k}}
 \right.
 $$
 
-当我们求出 $a_1,a_2,a_3,\cdots,a_k$ 后，就可以通过[中国剩余定理](/2025/02/05/1/#中国剩余定理)来求出 $\Large \binom{n}{m}$。
+当我们求出 $a_1,a_2,a_3,\cdots,a_k$ 后，就可以通过[中国剩余定理](/2025/02/05/1/#中国剩余定理)来求出 $\dbinom{n}{m}$。
 
 ### 2.移除分子分母中的质数
 
@@ -672,19 +693,494 @@ $$
 S(n)\equiv S\left(\left\lfloor\frac nq\right\rfloor\right)\times \left(\prod_{i=1,q\nmid i}^{q^k}i\right)^{\large \left\lfloor\frac{n}{q^k}\right\rfloor}\times \prod_{i=1,q\nmid i}^{n\bmod q^k}i
 \pmod {q^k}
 $$
+
 对于 $S\left(\left\lfloor\frac nq\right\rfloor\right)$，显然可以递归，后面两项暴力计算即可。
 
-对于中间一项，可以使用 Wilson 定理的推广。
+对于中间一项，可以使用 Wilson 定理的推论。
 
-记 $(n!)_p$ 为 $1\sim n$ 中不被 $p$ 整除的数的乘积。
+Wilson 定理的推论记 $(m!)_p$ 为 $1\sim m$ 中不被 $p$ 整除的数的乘积。
 
 显然：
+
 $$
-\left(\prod_{i=1,q\nmid i}^{q^k}i\right)^{\large \left\lfloor\frac{n}{q^k}\right\rfloor}
-=
-\left((n!)_p\right)^{\large \left\lfloor\frac{n}{q^k}\right\rfloor}
+\left(\prod_{i=1,q\nmid i}^{q^k}i\right)=\left((q^k!)_p\right)
 $$
 
+由 Wilson 定理的推论得：
 
-# 母函数与递推关系
+$$
+(q^k!)_q=
+\begin{cases}
+1 &q=2\land k\geq3\\
+-1 &\text{otherwise.}
+\end{cases}
+$$
 
+中间一项直接算即可。
+
+<div style="color:red;font-size:30px;">未完</div>
+
+# 生成函数与递推关系
+
+## 母函数 生成函数
+
+生成函数即母函数。
+
+其主要思想是将一个序列 $a_1,a_2,a_3,\cdots,a_n,\cdots$ 与一个函数项级数 $G(x)=\sum\limits_{n=0}^\infty a_nu_n(x)$ 联系起来，从而通过研究 $G(x)$ 得到原序列的性质。
+
+但是，为了便于研究生成函数，且生成函数中的 $x$ 没有意义，因此一般都有 $0<x<1$ 来使得 $x^\infty$ 收敛为 $0$，从而存在**封闭形式**。
+
+生成函数分为**普通生成函数**（对应处理组合问题）和**指数生成函数**（对应处理排列问题）。
+
+几种常见的生成函数：
+
+* **普通生成函数**：
+  $$
+    G(x)=\sum_{n=0}^\infty a_nx^n
+  $$
+* **指数生成函数**：
+  $$
+    G(x)=\sum_{n=0}^\infty a_n\frac{x^n}{n!}
+  $$
+
+<details class="note" open>
+    <summary>生成函数 $G(x)$ 中 $x$ 的作用</summary>
+    <p>
+        <blockquote>
+            生成函数中的 $x$ 没有任何作用，就是个占位符。
+        </blockquote>
+    </p>
+	<p>
+        事实上，我们求解出生成函数最后求解答案时，使用的多为系数。因此 $x$ 可以不管。
+	</p>
+</details>
+当序列 $a$ 有限时，级数求和不应当取 $\infty$ 项，而应当取长度项减一（从 $0$ 开始）。
+
+### 一道例题
+
+有<span style="color:red;">红球</span>两个，<span style="color:blue;">蓝球</span>一个、<span style="color:green;">绿球</span>一个，试求有多少种不同的组合方案？
+
+#### 组合数解法
+
+对于红球，三种选择；对于蓝球，两种选择；对于绿球，两种选择。
+
+则最终组合方案数为 $3\times 2\times 2=12$。
+
+#### 生成函数解法
+
+考虑使用 $x$ 的指数表示球的总数，项的系数对应选择的方案数目。
+
+考虑构造数列 $a_{1,0},a_{1,1},a_{1,2},\cdots,a_{2,0},a_{2,1},a_{2,2},\cdots,a_{3,0},a_{3,1},a_{3,2},\cdots$，每一项都为 $1$。
+
+取红球的生成函数为：
+
+$$
+\begin{aligned}
+G_1(x)&=\sum_{n=0}^2 a_{1,n}x^n\\
+&=a_{1,0}+a_{1,1}x+a_{1,2}x^2\\
+&=1+x+x^2
+\end{aligned}
+$$
+
+取蓝球的生成函数为：
+
+$$
+\begin{aligned}
+G_2(x)&=\sum_{n=0}^1 a_{2,n}x^n\\
+&=a_{2,0}+a_{2,1}x\\
+&=1+x
+\end{aligned}
+$$
+
+取绿球的生成函数为：
+
+$$
+\begin{aligned}
+G_3(x)&=\sum_{n=0}^1 a_{3,n}x^n\\
+&=a_{3,0}+a_{3,1}x\\
+&=1+x
+\end{aligned}
+$$
+
+则总方案数目的生成函数为：
+
+$$
+\begin{aligned}
+G(x)&=G_1(x)\cdot G_2(x)\cdot G_3(x)\\
+&=(1+x+x^2)(1+x)(1+x)\\
+&=x^4+3x^3+4x^2+3x+1\\
+\end{aligned}
+$$
+
+则总方案数目为 $1+3+4+3+1=12$。
+
+## 普通生成函数
+
+定义序列 $a_1,a_2,a_3,\cdots,a_n,\cdots$ 的普通生成函数为**形式幂级数**：
+
+$$
+G(x)=\sum_{n=0}^\infty a_nx^n
+$$
+
+特别地，若序列 $a$ 存在**通项公式**，那么通项公式即系数 $a_n$。
+
+当然，有些序列**不存在形式幂级数形式的生成函数**，仅仅存在封闭形式的，因此也**不存在通项公式**。
+
+### 基本运算
+
+#### 加减法
+
+考虑序列 $a,b$ 的普通生成函数 $A(x),B(x)$，那么：
+
+$$
+A(x)\pm B(x)=\sum_{n=0}^\infty(a_n\pm b_n)x^n
+$$
+
+$A(x)\pm B(x)$ 是序列 $\left\langle a_b\pm b_n \right\rangle$ 的生成函数。
+
+#### 乘法
+
+考虑序列 $a,b$ 的普通生成函数 $A(x),B(x)$，那么：
+
+$$
+A(x)\cdot B(x)=\sum_{n=0}^\infty\left(\sum_{i=0}^n a_ib_{n-i}\right)x^n
+$$
+
+$A(x)\cdot B(x)$ 即序列 $\left\langle\sum\limits_{i=0}^na_ib_{n-i}\right\rangle$ 的生成函数。
+
+### 生成函数定理
+
+> 这东西在面试何笔试中比较有用，对 OI 影响似乎不大。
+
+对于 $n$ 元集合 $S=\{a_1,a_2,a_3,\cdots,a_n\}$，若限定元素 $a_i$ 出现次数的集合为 $M_i$，则**该组合数序列的生成函数**为：
+
+$$
+\large G(x)=\prod_{i=1}^n\left(\sum_{m\in M_i}p_{i,m}\cdot x^m\right)
+$$
+
+其中，$p_{i,m}$ 为系数，**需要依据题目而求**。~~原 PPT 中省略了系数，讲课时也省略了，害我思考好久。。。~~
+
+下面通过一道例题来辅助理解。
+
+#### 一道例题
+
+某单位有 $8$ 位男同志，$5$ 位女同志。现要组织一个由**偶数个男同志**和**数目不少于两个的女同志**组成的小组，试求有多少种组成方式？
+
+此处显然不能像[上文](#组合数解法)那样轻而易举地通过组合数得出答案，但是我们可以通过生成函数来解决。
+
+设男同志组合数序列的生成函数为 $G_1(x)$，女同志为 $G_2(x)$，生成函数中每一项的**次数**表示选择的人数。
+
+男同志只能选择偶数个，则能够选择的数目的集合为 $M_1=\{0,2,4,6,8\}$：
+
+$$
+\large G_1(x)=\binom80x^0+\binom82x^2+\binom84x^4+\binom86x^6+\binom88x^8
+$$
+
+女同志至少选择 $2$ 个，则能够选择的数目的集合为 $M_2=\{2,3,4,5\}$：
+
+$$
+\large G_2(x)=\binom52x^2+\binom53x^3+\binom54x^4+\binom55x^5
+$$
+
+则总组合数目的生成函数为：
+
+$$
+\large
+\begin{aligned}
+G(x)&=G_1(x)\cdot G_2(x)\\
+&=\left(\binom80x^0+\binom82x^2+\binom84x^4+\binom86x^6+\binom88x^8\right)\left(\binom52x^2+\binom53x^3+\binom54x^4+\binom55x^5\right)\\
+&=10x^2+10x^3+285x^4+281x^5+840x^6+728x^7+630x^8+350x^9+150x^{10}+38x^{11}+5x^{12}+x^{13}
+\end{aligned}
+$$
+
+则最终答案为：
+
+$$
+\large
+\begin{aligned}
+\sum_{n=0}^\infty [x^n]G(x)&=10+10+285+281+840+728+630+350+150+38+5+1\\
+&=3328\\
+\end{aligned}
+$$
+
+其中 $[x^n]G(x)$ 表示 $G(x)$ 中 $x^n$ 项的**系数**。
+
+在这个例子中，就是一个二元集合 $S=\{\text{男同志},\text{女同志}\}$。
+
+男同志能够出现的次数的集合 $M_1=\{0,2,4,6,8\}$，女同志能够出现的次数的集合 $M_2=\{2,3,4,5\}$。
+
+系数即从男（女）同志中选择出指定人数的方案数，组合数计算即可。
+
+
+### 封闭形式
+
+通常情况下，我们会**将形式幂级数转换为封闭形式**以便于分析。
+
+例如，求解序列 $\dbinom n0,\dbinom n1,\dbinom n2,\cdots,\dbinom nn$ 的封闭形式的母函数。
+
+其母函数显然为：
+
+$$
+\begin{aligned}
+G(x)&=\sum_{i=0}^n\dbinom nix^i\\
+&=\sum_{i=0}^n\dbinom nix^i1^{n-i}\\
+&=(1+x)^n
+\end{aligned}
+$$
+
+则 $\large (1+x)^n$ 就被称为形式幂级数的**封闭形式**。
+
+#### 常见生成函数的封闭形式
+
+1. $\large \sum\limits_{i=0}^\infty x^i=\dfrac{1}{1-x}$
+2. $\large \sum\limits_{i=0}^\infty(i+1)x^i=\dfrac{1}{(1-x)^2}$
+3. $\large \sum\limits_{i=0}^\infty p^ix^i=\dfrac{1}{1-px}$
+4. $\large \sum\limits_{i=0}^\infty\dbinom{n-1+i}{i}p^ix^i=\dfrac{1}{(1-px)^n}$
+5. $\large \sum\limits_{i=0}^\infty\dbinom{n-1+i}{i}x^i=\dfrac{1}{(1-x)^n}$
+
+#### 求解生成函数的封闭形式
+
+先看看六道例题。
+
+##### 六道例题
+
+1. 求解序列 $\langle0,1,1,\cdots\rangle$ 的生成函数的**形式幂级数形式**和**封闭形式**。
+
+   <details class="note">
+       <summary>答案与解析</summary>
+       <p>
+           $G(x)=\sum\limits_{i=1}^\infty x^n=\dfrac{x}{1-x}$。
+       </p>
+       <p>
+           解析：
+       </p>
+       <p>
+           首先形式幂级数形式的生成函数很好求，然后发现当 $i=0$ 的时候对答案没有贡献，因此在 $\sum$ 中从 $1$ 开始累加。
+       </p>
+       <p>
+        考虑到上文提及的 $\large \sum\limits_{i=0}^\infty x^i=\dfrac{1}{1-x}$，那么便不难发现：
+       </p>
+       <p>
+           $$
+           \dfrac{G(x)}{x}=\sum\limits_{i=0}^\infty x^i=\dfrac{1}{1-x}
+           $$
+       </p>
+       <p>
+           可以解得 $G(x)=\dfrac{x}{1-x}$。
+       </p>
+       <p>
+           其他方法列方程也可以，方法很多。
+       </p>
+   </details>
+   
+2. 求解序列 $\langle1,0,1,0,1,\cdots\rangle$ 的生成函数的**形式幂级数形式**和**封闭形式**。
+
+   <details class="note">
+       <summary>答案与解析</summary>
+       <p>
+           先说下我自己的方法。
+       </p>
+       <p>
+           显然 $G(x)=1+x^2+x^4+\cdots$，那么 $x\cdot G(x)=x+x^3+x^5+\cdots$。
+       </p>
+       <p>
+           因此：
+       </p>
+       <p>
+           $$
+           G(x)+x\cdot G(x)=1+x^2+x^3+\cdots=\sum\limits_{i=0}^\infty x^i=\dfrac{1}{1-x}
+           $$
+       </p>
+       <p>
+           解得：
+       </p>
+       <p>
+           $$
+           G(x)=\dfrac{1}{(1+x)(1-x)}=\dfrac{1}{1-x^2}
+           $$
+       </p>
+       <hr>
+       <p>
+           再说说 <a href="https://oi-wiki.org/math/poly/ogf/#%E5%B0%81%E9%97%AD%E5%BD%A2%E5%BC%8F">OI Wiki</a> 的方法。
+       </p>
+       <p>
+         考虑到：
+       </p>
+       <p>
+           $$
+           \begin{aligned}
+           G(x)&=\sum_{n=0}^\infty x^{2n}\\
+           &=\sum_{n=0}^\infty \left(x^2\right)^n\\
+           &=\sum_{n=0}^\infty x^nx^n\\
+           &=x\cdot \frac{1}{1-x^2}
+           \end{aligned}
+           $$
+       </p>
+       <p>
+           利用的是第 $3$ 个。
+       </p>
+       <hr>
+       <p>
+           方法其实还有很多，比如利用等比数列。
+       </p>
+   </details>
+   
+3. 求解序列 $\langle1,2,3,4,\cdots\rangle$ 的生成函数的**形式幂级数形式**和**封闭形式**。
+
+   <details class="note">
+       <summary>答案与解析</summary>
+       <p>
+           显然：
+       </p>
+       <p>
+           $$
+           G(x)=\sum_{n=0}^\infty (n+1)x^n
+           $$
+       </p>
+       <p>
+           即上文第 $2$ 个。
+       </p>
+       <p>
+           $$
+           G(x)=\frac{1}{(1-x)^2}
+           $$
+       </p>
+   </details>
+
+4. 求解序列 $a_n=\dbinom{m}{n}$  的生成函数（$m$ 为常数）的**形式幂级数形式**和**封闭形式**。
+
+   <details class="note">
+       <summary>答案与解析</summary>
+       <p>
+           $$
+           \begin{aligned}
+           G(x)&=\sum_{n=0}^\infty\binom{m}{n}x^n\\
+           &=\sum_{n=0}^\infty\binom{m}{n}x^n1^{n-i}\\
+           &=(1+x)^m
+           \end{aligned}
+           $$
+       </p>
+       <p>
+           通过二项式定理可得。
+       </p>
+   </details>
+
+5. 求解序列 $a_n=\dbinom{m+n}{n}$  的生成函数（$m$ 为常数）的**形式幂级数形式**和**封闭形式**。
+
+   <details class="note">
+       <summary>答案与解析</summary>
+       <p>
+           代入第 $4$ 个公式：
+       </p>
+       <p>
+           $$
+           \begin{aligned}
+           G(x)&=\sum_{n=0}^\infty \binom{m+n}{n}x^n\\
+           &=\sum_{n=0}^\infty \binom{(m+1)-1+n}{n}\times 1^nx^n\\
+           &=\frac{1}{(1-1x)^{m+1}}\\
+           &=\frac{1}{(1-x)^{m+1}}\\
+           \end{aligned}
+           $$
+       </p>
+   </details>
+
+##### 总结
+
+主要是这几种方法：
+
+* 列方程求解，多用于**等比序列**或者**循环序列**。
+* 转换为已知封闭形式生成函数的形式幂级数形式后求解。
+* 从递推式求解，见下文
+
+需要注意的是，**无限**序列 $a$ 中，若其生成函数为 $G(x)$ 且 $a_0,x>0$，则 $G(x)> x\cdot G(x)$。
+
+### 从递推式求解生成函数的封闭形式
+
+在这种情况下求出的生成函数**可能不存在形式幂级数形式**。
+
+以 **Fibonacci 数列**为例，通过递推式求解出其生成函数封闭形式。
+
+规定：$f_0=0,f_1=1$，当 $n\geq 2$ 时有 $\large f_n=f_{n-1}+f_{n-2}$。
+
+令其生成函数为：
+
+$$
+\large F(x)=\sum_{n=0}^\infty f_nx^n
+$$
+
+原来的递推式可更改为：
+
+$$
+f_n=\sum_{i=1}^kp_if_{n-i}
+$$
+
+其中，$k\leq n$。$k$ 表示 $\large f_{n-k},f_{n-k+1},f_{n-k+2},\cdots,f_{n-1}$ 与 $f_n$ 有关，$p_i$ 是系数，依递推式而定。
+
+**类似于“$x$ 进制”，显然 $F(x)$ 乘上一个 $x$ 就会“右移一位”，空出最左边的 $x^0$ 的位置；但是对于无限序列，考虑到其长度为无限，因此当 $a_0,x>0$ 时 $x\cdot F(x)$ 反而可能小于 $F(x)$，因为少了  $x_0$ 位置**
+
+因此我们可以修改上面的递推式，可得：
+
+$$
+F(x)=\sum_{i=1}^kp_ix^iF(x)+G(x)
+$$
+
+其中，$G(x)$ 用于补齐 $k$ 位，其次数小于 $k$。
+
+因为在 $n<k$ 时，**递推式并不正确**。
+
+因此我们需要使用 $G(x)$ 来使这一“边界情况”保持正确。
+
+进一步变换得到：
+
+$$
+F(x)=\frac{G(x)}{1-\sum\limits_{i=1}^kp_ix^i}
+$$
+
+~~显然，这个例子不太例子。~~
+
+代入 $k=2,p_1=p_2=1$ 得：
+
+$$
+\begin{aligned}
+F(x)&=x\cdot F(x)+x^2\cdot F(x)+G(x)\\
+&=(x^2+x)F(x)+G(x)
+\end{aligned}
+$$
+
+这时，我们用于补全的 $G(x)$ 为 $x$。
+
+因为 $F(x)=(x^2+x)F(x)$ 递推的时候并没有递推 $f_0\sim f_{k-1}$ 的值，因此需要手动加上这个值，否则 $f_1$ 没有值。$f_0$ 为 $0$ 不需要加。
+
+则：
+
+$$
+F(x)=\frac{x}{1-x-x^2}
+$$
+
+***
+
+但是这样似乎就会出现一个问题：若 $f_i$ 的值不仅仅与 $f_j$ 有关呢？
+
+考虑与 $f_i$ 有关的数可能是哪些：常数，$f$ 的其他项 $f_j$，$i$。
+
+事实上，如果 $f_i$ 与 $i$ 或常数有关，仍然可以求解。
+
+***
+
+例如：$f_0=0,f_1=1$，对于 $n\geq 2$ 有 $f_n=3f_{n-1}+2f_{n-2}+n-2$。（常数、$f$ 的其他项，$n$ 兼具）
+
+由上文可以得到，其生成函数为：
+
+$$
+F(x)=3x\cdot F(x)+2x^2\cdot F(x)+\frac{x}{(1-x)^2}-2\cdot \frac{1-x}{2}+G(x)
+$$
+
+此时，$G(x)=x$。
+
+则：
+
+$$
+\begin{aligned}
+F(x)&=\dfrac{\dfrac{x}{(1-x)^2}-2\cdot \dfrac{1-x}{2}+x}{1-3x-2x^2}\\
+\end{aligned}
+$$
