--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -23,7 +23,7 @@ words:
   如：
 
   1. $\sum\limits_{i=1}^na_i=a_1+a_2+a_3+\cdots+a_n$
-  2. $\sum_\limits{i\in V}a_i$
+  2. $\sum\limits_{i\in V}a_i$
 
 * $\prod$：连乘积。
 
