--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -26,7 +26,21 @@ words:
   - 题解：卢卡斯定理/Lucas 定理
 ---
 
-> [参考资料](/file/2025/02/组合数学25年竞赛.zip) [参考资料](/file/2025/02/组合数学修订.zip) [参考资料](/file/2025/02/数学.pdf) [参考资料](/file/2025/02/母函数.pdf)
+> [参考资料](/file/2025/02/组合数学25年竞赛.zip) [参考资料](/file/2025/02/组合数学修订.zip) [参考资料](/file/2025/02/数学.pdf) [参考资料](/file/2025/02/母函数.pdf) [参考资料](/file/2025/02/组合数学0207.rar)
+
+# 待办事项
+
+1. 排序生成算法：序数法、字典序法、换位法
+2. 格路问题
+3. 分拆数问题 Ferrers 图
+4. 指数型母函数
+5. Stirling 数
+6. Catalan 数
+7. 牛顿二项式定理
+8. 求导以求生成函数封闭形式
+9. 从生成函数的封闭形式求解通项公式
+10. 容斥原理
+11. 多项式系数
 
 # 排列与组合
 
@@ -374,91 +388,98 @@ $$
 ### 二项式推论
 
 1. $$
-    \binom{n}{0}+\binom{n}{1}+\binom{n}{2}+\cdots+\binom{n}{n}=\sum_{i=0}^n\binom{n}{i}=2^n
+   \binom{n}{0}+\binom{n}{1}+\binom{n}{2}+\cdots+\binom{n}{n}=\sum_{i=0}^n\binom{n}{i}=2^n
    $$
-    取 $a=b=1$ 代入即可。
+   
+   取 $a=b=1$ 代入即可。
 
-***
+   ***
 
 2. $$
-    \sum_{i=0}^n(-1)^i\binom{n}{i}=[n=0]
+   \sum_{i=0}^n(-1)^i\binom{n}{i}=[n=0]
    $$
 
-  其中 $[n=0]$ 为**艾弗森括号**，表示条件是否成立，$n=0$ 成立时为 $1$，否则为 $0$。
+   其中 $[n=0]$ 为**艾弗森括号**，表示条件是否成立，$n=0$ 成立时为 $1$，否则为 $0$。
 
-  令 $a=1,b=-1$ 即可。
+   令 $a=1,b=-1$ 即可。
 
-***
+   ***
 
 3. $$
-    \sum_{i=0}^ni\binom{n}{i}=n\times 2^{n-1}
+   \sum_{i=0}^ni\binom{n}{i}=n\times 2^{n-1}
    $$
-    令 $a=x,b=1$，两边求导后有 $x=1$。
+   
+   令 $a=x,b=1$，两边求导后有 $x=1$。
 
-  ~~虽然我并不会求导。~~
+   ~~虽然我并不会求导。~~
 
-***
+   ***
 
 4. $$
-    \sum_{i=0}^ni^2\binom{n}{i}=n(n+1)2^{n-2}
+   \sum_{i=0}^ni^2\binom{n}{i}=n(n+1)2^{n-2}
    $$
 
-  同上。
+   同上。
 
-  ~~显然我还是不会证明。~~
+   ~~显然我还是不会证明。~~
 
-***
+   ***
 
 5. $$
-    \sum_{i=0}^m\binom{n}{i}\binom{m}{k-i}=\binom{m+n}{k}
+   \sum_{i=0}^m\binom{n}{i}\binom{m}{k-i}=\binom{m+n}{k}
    $$
-    **范德蒙德恒等式**。
+   
+   **范德蒙德恒等式**。
 
-  代入组合数计算公式展开可证。
+   代入组合数计算公式展开可证。
 
-  其推论：
-$$
+   其推论：
+   
+   $$
    \sum_{i=0}^n\binom{n}{i}^2=\binom{2n}{n}
-$$
-  令 $n=k=m$ 即可。
+   $$
+   
+   令 $n=k=m$ 即可。
 
-***
+   ***
 
 6. $$
    \sum_{i=0}^n\binom{i}{k}=\binom{n+1}{k+1}
    $$
 
-  **朱世杰恒等式**。
+   **朱世杰恒等式**。
 
-  考虑集合 $S=\{a_1,a_2,a_3,\cdots,a_{n+1}\}$ 的 $k+1$ 子集数可证。
+   考虑集合 $S=\{a_1,a_2,a_3,\cdots,a_{n+1}\}$ 的 $k+1$ 子集数可证。
 
-  ~~我还是不会。~~
+   ~~我还是不会。~~
 
-***
+   ***
 
 7. $$
-    \binom{n}{r}\binom{r}{k}=\binom{n}{k}\binom{n-k}{r-k}
+   \binom{n}{r}\binom{r}{k}=\binom{n}{k}\binom{n-k}{r-k}
    $$
-    代入公式展开可证。
+   
+   代入公式展开可证。
 
-***
+   ***
 
 8. $$
-    \sum_{i=0}^n\binom{n-i}{i}=F_{n+1}
+   \sum_{i=0}^n\binom{n-i}{i}=F_{n+1}
    $$
 
    $F$ 为**斐波那契数列**，第一项为 $F_0=0$。
    
     ~~不会证。~~
 
-***
+   ***
 
 9. $$
-    \binom{n+k}{k}^2=\sum_{j=0}^k\binom{k}{j}^2\binom{n+2k-j}{2k}
+   \binom{n+k}{k}^2=\sum_{j=0}^k\binom{k}{j}^2\binom{n+2k-j}{2k}
    $$
-    通过范德蒙恒等式可证，被称为**李善兰恒等式**。
    
-     ~~还是不会证。~~
+   通过范德蒙恒等式可证，被称为**李善兰恒等式**。
+   
+   ~~还是不会证。~~
    
    ***
    
@@ -1094,9 +1115,17 @@ $$
 
 需要注意的是，**无限**序列 $a$ 中，若其生成函数为 $G(x)$ 且 $a_0,x>0$，则 $G(x)> x\cdot G(x)$。
 
+### 通过求导求解生成函数的封闭形式
+
+<span style="color:red;font-size:30px">未完</span>
+
 ### 从递推式求解生成函数的封闭形式
 
 在这种情况下求出的生成函数**可能不存在形式幂级数形式**。
+
+#### 根据递推式得出方程
+
+##### Fibonacci 数列
 
 以 **Fibonacci 数列**为例，通过递推式求解出其生成函数封闭形式。
 
@@ -1116,7 +1145,7 @@ $$
 
 其中，$k\leq n$。$k$ 表示 $\large f_{n-k},f_{n-k+1},f_{n-k+2},\cdots,f_{n-1}$ 与 $f_n$ 有关，$p_i$ 是系数，依递推式而定。
 
-**类似于“$x$ 进制”，显然 $F(x)$ 乘上一个 $x$ 就会“右移一位”，空出最左边的 $x^0$ 的位置；但是对于无限序列，考虑到其长度为无限，因此当 $a_0,x>0$ 时 $x\cdot F(x)$ 反而可能小于 $F(x)$，因为少了  $x_0$ 位置**
+**类似于“$x$ 进制”，显然 $F(x)$ 乘上一个 $x$ 就会“右移一位”，空出最左边的 $x^0$ 的位置；但是对于无限序列，考虑到其长度为无限，因此当 $a_0,x>0$ 时 $x\cdot F(x)$ 反而可能小于 $F(x)$，因为少了  $x_0$ 的位置**。
 
 因此我们可以修改上面的递推式，可得：
 
@@ -1147,7 +1176,7 @@ F(x)&=x\cdot F(x)+x^2\cdot F(x)+G(x)\\
 \end{aligned}
 $$
 
-这时，我们用于补全的 $G(x)$ 为 $x$。
+这时，我们用于补全的 $G(x)$ 为 $x$（根据不同的定义，也有可能为 $1$）。
 
 因为 $F(x)=(x^2+x)F(x)$ 递推的时候并没有递推 $f_0\sim f_{k-1}$ 的值，因此需要手动加上这个值，否则 $f_1$ 没有值。$f_0$ 为 $0$ 不需要加。
 
@@ -1167,20 +1196,230 @@ $$
 
 ***
 
+##### $f_i$ 递推式包含 $i$ 和常数
+
 例如：$f_0=0,f_1=1$，对于 $n\geq 2$ 有 $f_n=3f_{n-1}+2f_{n-2}+n-2$。（常数、$f$ 的其他项，$n$ 兼具）
 
-由上文可以得到，其生成函数为：
+定义其生成函数为：
 
 $$
-F(x)=3x\cdot F(x)+2x^2\cdot F(x)+\frac{x}{(1-x)^2}-2\cdot \frac{1-x}{2}+G(x)
+F(x)=\sum_{n=0}^\infty f_nx^n
 $$
 
-此时，$G(x)=x$。
+若递推式为 $f_n=3f_{n-1}+2f_{n-2}$，可以很好得出（$G(x)=x$）：
+
+$$
+F(x)=3x\cdot F(x)+2x^2\cdot F(x)+x
+$$
+
+然而，$n-2$ 似乎不知道如何处理。
+
+事实上，我们 $n-2$ 也可以构造出一个序列 $a=\left\langle\triangle,\triangle,0,1,2,\cdots\right\rangle$ 满足递推式 $a_n=a_{n-1}+1,a_2=0$。（$\triangle$ 表示不存在）
+
+那么序列 $a$ 的生成函数为：
+
+$$
+\begin{aligned}
+A(x)&=\sum_{i=2}^\infty a_ix^i\\
+&=\sum_{i=2}^\infty(i-2)x^i\\
+&=\sum_{i=0}^{\infty}ix^{i+2}\\
+&=\sum_{i=1}^\infty ix^{i+2}\\
+&=\sum_{i=0}^\infty (i+1)x^{i+3}\\
+&=x^3\sum_{i=0}^\infty (i+1)x^i\\
+&=\frac{x^3}{(1-x)^2}\\
+\end{aligned}
+$$
+
+那么我们用刚才求出的 $F(x)$ 加上 $A(x)$ 即序列 $f$ 的生成函数。
+
+即：
+
+$$
+\begin{aligned}
+F(x)&=3x\cdot F(x)+2x^2\cdot F(x)+A(x)+G(x)\\
+(1-3x-2x^2)F(x)&=\frac{x^3}{(1-x)^2}+x\\
+F(x)&=\dfrac{\dfrac{x^3}{(1-x)^2}+x}{1-3x-2x^2}\\
+\end{aligned}
+$$
+
+##### $f_i$ 递推式中包含多个 $f_j$
+
+例如：对于序列 $f$，满足 $f_0=1,f_n=\sum\limits_{i=0}^{n-1}f_if_{n-i-1}$，求其生成函数 $F(x)$ 的封闭形式。~~其实就是卡特兰数。~~
+
+首先对于 $\large \sum\limits_{i=0}^{n-1}f_if_{n-i-1}$，明显可看作是一个类似于“卷积后上升一位”的形式。
+
+<details class="note">
+    <summary>关于“卷积后上升一位”</summary>
+    <p>
+        首先得了解“卷积”是什么。
+    </p>
+    <p>
+        具体而言，就是对于两个序列 $a,b$，其<b>定义</b>卷积为：
+    </p>
+    <p>
+        $$
+        c_i=\sum_{j=0}^i a_jb_{i-j}
+        $$
+    </p>
+    <p>
+        而生成函数的卷积即多项式卷积。（生成函数的本质就是一个多项式）
+    </p>
+    <p>
+        $\large \sum\limits_{i=0}^{n-1}f_if_{n-i}$ 可以看作 $f$ 与 $f$ 自己的卷积（自卷积）。
+    </p>
+    <p>
+        然而，在上文的递推式中乘的不是 $f_{n-i}$，而是 $f_{n-i-1}$。
+    </p>
+    <p>
+        而这完全可以看作是在生成函数中多乘了一个 $x$ 导致“右移”。
+    </p>
+    <blockquote>
+        <b>类似于“$x$ 进制”，显然 $F(x)$ 乘上一个 $x$ 就会“右移一位”，空出最左边的 $x^0$ 的位置；但是对于无限序列，考虑到其长度为无限，因此当 $a_0,x>0$ 时 $x\cdot F(x)$ 反而可能小于 $F(x)$，因为少了  $x_0$ 的位置</b>。
+    </blockquote>
+</details>
+
+因此我们就可以得到：
+
+$$
+\begin{aligned}
+F(x)&=\sum_{n=0}^\infty f_nx^n\\
+&=xF^2(x)+G(x)\\
+&=x\cdot F^2(x)+1\\
+\end{aligned}
+$$
+
+解得：
+
+$$
+F(x)=\frac{1\pm \sqrt{1-4x}}{2x}
+$$
+
+但是很明显，$F(x)$ 只可能对应一个封闭形式，因此必然需要舍弃一个根。
+
+我们可以对 $F(x)$ 进行**分子有理化**：
+
+$$
+\begin{aligned}
+F(x)&=\frac{(1\pm \sqrt{1-4x})(1\mp\sqrt{1-4x})}{2x(1\mp \sqrt{1-4x})}\\
+&=\frac{1-(1-4x)}{2x(1\mp \sqrt{1-4x})}\\
+&=\frac{4x}{2x(1\mp\sqrt{1-4x})}\\
+&=\frac{2}{1\mp\sqrt{1-4x}}
+\end{aligned}
+$$
+
+考虑到当 $x=0$ 时，$F(x)=G(x)=1$。
+
+因此可列：
+
+$$
+\frac{2}{1\mp\sqrt{1}}=1
+$$
+
+考虑到上式成立只能是：
+
+$$
+\frac{2}{1+1}=1
+$$
+
+所以这里的 $\large \mp$ 选择了 $\large +$，原来的 $\large \pm$ 应当选择 $\large -$。
+
+故，$F(x)$ 的封闭形式为：
+$$
+F(x)=\frac{1-\sqrt{1-4x}}{2x}
+$$
+
+#### 总结
+
+可以根据序列 $f$ 的递推式得出方程进而求解。
+
+如果是 $f_{n-i}$，那么在生成函数 $F(x)$ 中的对应项就是 $x^i\cdot F(x)$。
+
+对于一般的一次递推式存在通法（二次递推式一般需要去根，一次不需要）：
+
+对于序列 $f$ 满足：
+$$
+f_i=
+\begin{cases}
+g_i&i<k\\
+\sum\limits_{n=1}^kp_nf_{n-i}+a_i&i\geq k
+\end{cases}
+$$
+其生成函数 $F(x)$ 为：
+$$
+F(x)=\frac{A(x)+G(x)}{1-\sum\limits_{i=1}^kp_ix^i}
+$$
+
+其中，$A(x)$ 是序列 $a$ 的生成函数，$G(x)$ 是有限序列 $g$ 的生成函数，满足 $|g|\leq k$。
+
+### 从生成函数的封闭形式求解通项公式
+
+#### 通法
+
+只讨论序列 $f$ 的生成函数为 $F(x)=\dfrac{\large1}{\large \sum\limits_{i=0}^ka_ix^i}$ 的形式。
+
+不妨令 $\large \sum\limits_{i=0}^ka_ix^i=\prod\limits_{i=0}^t(1-p_ix)^{k_i}$，满足 $\large \sum\limits_{i=0}^tk_i=k$。
+
+构造 $A_{i,j}$，则通过待定系数法可以解得：
+
+$$
+\dfrac{\large1}{\large \sum\limits_{i=0}^ka_ix^i}=\Large\sum_{i=0}^t\sum_{j=1}^{k_i}\large\frac{A_{i,j}}{(1-p_ix)^j}
+$$
+
+考虑到：
+
+$$
+\large \sum\limits_{i=0}^\infty\dbinom{n-1+i}{i}p^ix^i=\dfrac{1}{(1-px)^n}
+$$
+
+
+
+#### Fibonacci 数列通项公式
+
+已知 Fibonacci 数列满足 $f_0=0,f_1=1,f_n=f_{n-1}+f_{n-2}$，其生成函数为 $F(x)=\dfrac{x}{1-x-x^2}$。
+
+令：
+
+$$
+\begin{aligned}
+\frac{x}{1-x-x^2}&=\frac{A}{1-ax}+\frac{B}{1-bx}\\
+&=\frac{(A-Abx)+(B-Bax)}{(1-ax)(1-bx)}\\
+&=\frac{(A+B)-(Ab+Ba)x}{1-(a+b)x+ab\cdot x^2}\\
+\end{aligned}
+$$
+
+则可列：
+
+$$
+\begin{cases}
+A+B=0\\
+-(Ab+Ba)=1\\
+a+b=1\\
+ab=-1\\
+\end{cases}
+$$
+
+解得：
+
+$$
+\begin{cases}
+A=\dfrac1{\sqrt5}\\
+B=-\dfrac1{\sqrt5}\\
+a=\dfrac{1+\sqrt5}2\\
+b=\dfrac{1-\sqrt5}{2}\\
+\end{cases}
+$$
 
 则：
 
 $$
 \begin{aligned}
-F(x)&=\dfrac{\dfrac{x}{(1-x)^2}-2\cdot \dfrac{1-x}{2}+x}{1-3x-2x^2}\\
+F(x)&=\frac{x}{1-x-x^2}\\
+&=\dfrac{\dfrac{1}{\sqrt5}}{1-\dfrac{1+\sqrt5}{2}\cdot x}\cdot\dfrac{-\dfrac{1}{\sqrt5}}{1-\dfrac{1-\sqrt5}{2}\cdot x}\\
+&=
 \end{aligned}
+$$
+
+又因为
+$$
+
 $$
