--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -20,27 +20,26 @@ words:
   - 加法原理
   - 乘法原理
   - 加乘原理
-  - 球盒问题
+  - 
+问题
   - 生成函数
   - 题解：洛谷P3807
   - 题解：卢卡斯定理/Lucas 定理
 ---
 
-> [参考资料](/file/2025/02/组合数学25年竞赛.zip) [参考资料](/file/2025/02/组合数学修订.zip) [参考资料](/file/2025/02/数学.pdf) [参考资料](/file/2025/02/母函数.pdf) [参考资料](/file/2025/02/组合数学0207.rar)
+> [参考资料](/file/2025/02/组合数学25年竞赛.zip) [参考资料](/file/2025/02/组合数学修订.zip) [参考资料](/file/2025/02/数学.pdf) [参考资料](/file/2025/02/母函数.pdf) [参考资料](/file/2025/02/组合数学0207.rar) [参考资料](/file/2025/02/组合数学0208.rar)
 
 # 待办事项
 
-1. 排序生成算法：序数法、字典序法、换位法
-2. 格路问题
-3. 分拆数问题 Ferrers 图
-4. 指数型母函数
+1. 扩展 Lucas 定理的代码
+2. 排序生成算法：序数法、字典序法、换位法
+3. 格路问题
+4. 分拆数问题 Ferrers 图
 5. Stirling 数
 6. Catalan 数
 7. 牛顿二项式定理
-8. 求导以求生成函数封闭形式
-9. 从生成函数的封闭形式求解通项公式
-10. 容斥原理
-11. 多项式系数
+8. 容斥原理
+9. 莫比乌斯变换
 
 # 排列与组合
 
@@ -238,13 +237,13 @@ $$
 | 球有无区别 | 盒有无区别 | 盒能否为空 | 方案数 | 注释 |
 | :-----: | :----: | :-----: | :-----: | :-----: |
 | 有 | 有 |能|$m^n$| 每个球都有 $m$ 种选择 |
-| 有 | 有 |否||  |
-| 有 | 无 |能||  |
-| 有 | 无 |否||  |
-| 无 | 有 |能|$\dbinom{n+m-1}{n}$| 从 $m$ 个盒中选择 $n$ 个，可重复 |
+| 有 | 有 |否|$m!\begin{Bmatrix}n\\m\end{Bmatrix}$| 第二类 Stirling 数的一点改动 |
+| 有 | 无 |能|$\sum\limits_{i=1}^{\min(n,m)}\begin{Bmatrix}n\\i\end{Bmatrix}$| 第二类 Stirling 数对所有可能非空盒数求和。 |
+| 有 | 无 |否|$\begin{Bmatrix}n\\m\end{Bmatrix}$| 第二类 Stirling 数 |
+| 无 | 有 |能|$\dbinom{n+m-1}{n}$| 从 $m$ 个盒中选择 $n$ 个来放入球，可重复 |
 | 无 | 有 |否|$\dbinom{n-1}{m-1}$| 插空法：$n$ 个球摆好，将 $m-1$ 个挡板插入 $n-1$ 个空即可 |
-| 无 | 无 |能||  |
-| 无 | 无 |否||  |
+| 无 | 无 |能|$\left[x^n\right]G(x)=\frac{1}{(1-x)(1-x^2)\cdots(1-x^m)}$| 将 $n$ 个球分为 $1,2,3,\cdots,m$ 个非空部分，即分拆数。 |
+| 无 | 无 |否|$\left[x^n\right]G(x)=\frac{x^m}{(1-x)(1-x^2)\cdots(1-x^m)}$| 将 $n$ 个球分为 $m$ 个非空部分，即分拆数。 |
 
 #### 组合数的性质与求解
 
@@ -409,12 +408,10 @@ $$
    \sum_{i=0}^ni\binom{n}{i}=n\times 2^{n-1}
    $$
    
-   令 $a=x,b=1$，两边求导后有 $x=1$。
-
-   ~~虽然我并不会求导。~~
+   令 $a=x,b=1$，代入二项式定理两边求导后可证 $x=1$。
 
    ***
-
+   
 4. $$
    \sum_{i=0}^ni^2\binom{n}{i}=n(n+1)2^{n-2}
    $$
@@ -739,7 +736,9 @@ $$
 
 中间一项直接算即可。
 
-<div style="color:red;font-size:30px;">未完</div>
+时间复杂度：$\mathcal O(p\log p)$。
+
+
 
 # 生成函数与递推关系
 
@@ -761,8 +760,10 @@ $$
   $$
 * **指数生成函数**：
   $$
-    G(x)=\sum_{n=0}^\infty a_n\frac{x^n}{n!}
+  G(x)=\sum_{n=0}^\infty a_n\frac{x^n}{n!}
   $$
+
+一般来讲，在未特殊声明的前提下，“生成函数”指代的均为普通生成函数。
 
 <details class="note" open>
     <summary>生成函数 $G(x)$ 中 $x$ 的作用</summary>
@@ -835,7 +836,43 @@ $$
 
 则总方案数目为 $1+3+4+3+1=12$。
 
+## 基本运算
+
+### 加减法
+
+考虑序列 $a,b$ 的普通生成函数 $A(x),B(x)$，那么：
+
+$$
+A(x)\pm B(x)=\sum_{n=0}^\infty(a_n\pm b_n)x^n
+$$
+
+$A(x)\pm B(x)$ 是序列 $\left\langle a_b\pm b_n \right\rangle$ 的生成函数。
+
+### 乘法 多项式卷积
+
+考虑序列 $a,b$ 的普通生成函数 $A(x),B(x)$，那么：
+
+$$
+A(x)\cdot B(x)=\sum_{n=0}^\infty\left(\sum_{i=0}^n a_ib_{n-i}\right)x^n
+$$
+
+$A(x)\cdot B(x)$ 即序列 $\left\langle\sum\limits_{i=0}^na_ib_{n-i}\right\rangle$ 的生成函数。
+
+但是这似乎存在问题。
+
+如果使用乘法法则进行运算，则 $A(x)\cdot B(x)$ 应当为：
+
+$$
+A(x)\cdot B(x)=\sum_{i=0}^\infty\sum_{j=0}^\infty a_ib_j\cdot x^{i+j}
+$$
+
+显然，这个东西算不了。
+
+所以令 $i+j=n$，就可以变换为上面的第一个式子，便于计算。
+
 ## 普通生成函数
+
+普通生成函数用于求解**组合问题**。
 
 定义序列 $a_1,a_2,a_3,\cdots,a_n,\cdots$ 的普通生成函数为**形式幂级数**：
 
@@ -846,28 +883,6 @@ $$
 特别地，若序列 $a$ 存在**通项公式**，那么通项公式即系数 $a_n$。
 
 当然，有些序列**不存在形式幂级数形式的生成函数**，仅仅存在封闭形式的，因此也**不存在通项公式**。
-
-### 基本运算
-
-#### 加减法
-
-考虑序列 $a,b$ 的普通生成函数 $A(x),B(x)$，那么：
-
-$$
-A(x)\pm B(x)=\sum_{n=0}^\infty(a_n\pm b_n)x^n
-$$
-
-$A(x)\pm B(x)$ 是序列 $\left\langle a_b\pm b_n \right\rangle$ 的生成函数。
-
-#### 乘法
-
-考虑序列 $a,b$ 的普通生成函数 $A(x),B(x)$，那么：
-
-$$
-A(x)\cdot B(x)=\sum_{n=0}^\infty\left(\sum_{i=0}^n a_ib_{n-i}\right)x^n
-$$
-
-$A(x)\cdot B(x)$ 即序列 $\left\langle\sum\limits_{i=0}^na_ib_{n-i}\right\rangle$ 的生成函数。
 
 ### 生成函数定理
 
@@ -958,6 +973,7 @@ $$
 3. $\large \sum\limits_{i=0}^\infty p^ix^i=\dfrac{1}{1-px}$
 4. $\large \sum\limits_{i=0}^\infty\dbinom{n-1+i}{i}p^ix^i=\dfrac{1}{(1-px)^n}$
 5. $\large \sum\limits_{i=0}^\infty\dbinom{n-1+i}{i}x^i=\dfrac{1}{(1-x)^n}$
+6. $\large \sum\limits_{i=0}^\infty x^{ik}=\dfrac{1}{1-x^k}$
 
 #### 求解生成函数的封闭形式
 
@@ -1117,7 +1133,41 @@ $$
 
 ### 通过求导求解生成函数的封闭形式
 
-<span style="color:red;font-size:30px">未完</span>
+> 如果你不会求导可以[看看](/2025/02/05/1/#求导运算)。
+
+事实上，此处的“求导”**与其定义没有什么关系**，仅仅是作为一种形式运算而存在，用于将生成函数变形。
+
+对等式两侧进行**求导**来得到结果。
+
+已知：
+
+$$
+\sum\limits_{n=0}^\infty nx^n=\frac{x}{(1-x)^2}
+$$
+
+等式两边求导可得：
+
+$$
+\sum_{n=1}^\infty n^2x^{n-1}=\frac{(1-x)^2-2x(1-x)(-1)}{(1-x)^4}
+$$
+
+化简：
+
+$$
+\sum_{n=0}^\infty n^2x^{n-1}=\frac{1+x}{(1-x)^3}
+$$
+
+因此对于生成函数 $G(x)=\large \sum\limits_{\normalsize n=0}^{\normalsize \infty}\normalsize n^2x^n$ 就有：
+
+$$
+\begin{aligned}
+G(x)&=\sum\limits_{n=0}^{\infty}n^2x^n\\
+&=x\cdot \sum_{n=0}^\infty n^2x^{n-1}\\
+&=\frac{x(1+x)}{(1-x)^3}
+\end{aligned}
+$$
+
+使用这种形式大多是为了**将已知的生成函数 $G(x)$ 所有项的系数升次**。
 
 ### 从递推式求解生成函数的封闭形式
 
@@ -1145,7 +1195,7 @@ $$
 
 其中，$k\leq n$。$k$ 表示 $\large f_{n-k},f_{n-k+1},f_{n-k+2},\cdots,f_{n-1}$ 与 $f_n$ 有关，$p_i$ 是系数，依递推式而定。
 
-**类似于“$x$ 进制”，显然 $F(x)$ 乘上一个 $x$ 就会“右移一位”，空出最左边的 $x^0$ 的位置；但是对于无限序列，考虑到其长度为无限，因此当 $a_0,x>0$ 时 $x\cdot F(x)$ 反而可能小于 $F(x)$，因为少了  $x_0$ 的位置**。
+**类似于“$x$ 进制”，显然 $F(x)$ 乘上一个 $x$ 就会“右移一位”，空出最左边的 $x^0$ 的位置；但是对于无限序列，考虑到其长度为无限，因此当 $a_0>0$ 时 $x\cdot F(x)$ 反而可能小于 $F(x)$，因为少了  $x_0$ 的位置**。
 
 因此我们可以修改上面的递推式，可得：
 
@@ -1242,41 +1292,12 @@ F(x)&=\dfrac{\dfrac{x^3}{(1-x)^2}+x}{1-3x-2x^2}\\
 \end{aligned}
 $$
 
-##### $f_i$ 递推式中包含多个 $f_j$
+##### $f_i$ 递推式中包含 $f_j$ 项的次数不为 $1$（Catalan 数）
 
 例如：对于序列 $f$，满足 $f_0=1,f_n=\sum\limits_{i=0}^{n-1}f_if_{n-i-1}$，求其生成函数 $F(x)$ 的封闭形式。~~其实就是卡特兰数。~~
 
 首先对于 $\large \sum\limits_{i=0}^{n-1}f_if_{n-i-1}$，明显可看作是一个类似于“卷积后上升一位”的形式。
 
-<details class="note">
-    <summary>关于“卷积后上升一位”</summary>
-    <p>
-        首先得了解“卷积”是什么。
-    </p>
-    <p>
-        具体而言，就是对于两个序列 $a,b$，其<b>定义</b>卷积为：
-    </p>
-    <p>
-        $$
-        c_i=\sum_{j=0}^i a_jb_{i-j}
-        $$
-    </p>
-    <p>
-        而生成函数的卷积即多项式卷积。（生成函数的本质就是一个多项式）
-    </p>
-    <p>
-        $\large \sum\limits_{i=0}^{n-1}f_if_{n-i}$ 可以看作 $f$ 与 $f$ 自己的卷积（自卷积）。
-    </p>
-    <p>
-        然而，在上文的递推式中乘的不是 $f_{n-i}$，而是 $f_{n-i-1}$。
-    </p>
-    <p>
-        而这完全可以看作是在生成函数中多乘了一个 $x$ 导致“右移”。
-    </p>
-    <blockquote>
-        <b>类似于“$x$ 进制”，显然 $F(x)$ 乘上一个 $x$ 就会“右移一位”，空出最左边的 $x^0$ 的位置；但是对于无限序列，考虑到其长度为无限，因此当 $a_0,x>0$ 时 $x\cdot F(x)$ 反而可能小于 $F(x)$，因为少了  $x_0$ 的位置</b>。
-    </blockquote>
-</details>
 
 因此我们就可以得到：
 
@@ -1296,32 +1317,7 @@ $$
 
 但是很明显，$F(x)$ 只可能对应一个封闭形式，因此必然需要舍弃一个根。
 
-我们可以对 $F(x)$ 进行**分子有理化**：
-
-$$
-\begin{aligned}
-F(x)&=\frac{(1\pm \sqrt{1-4x})(1\mp\sqrt{1-4x})}{2x(1\mp \sqrt{1-4x})}\\
-&=\frac{1-(1-4x)}{2x(1\mp \sqrt{1-4x})}\\
-&=\frac{4x}{2x(1\mp\sqrt{1-4x})}\\
-&=\frac{2}{1\mp\sqrt{1-4x}}
-\end{aligned}
-$$
-
-考虑到当 $x=0$ 时，$F(x)=G(x)=1$。
-
-因此可列：
-
-$$
-\frac{2}{1\mp\sqrt{1}}=1
-$$
-
-考虑到上式成立只能是：
-
-$$
-\frac{2}{1+1}=1
-$$
-
-所以这里的 $\large \mp$ 选择了 $\large +$，原来的 $\large \pm$ 应当选择 $\large -$。
+考虑到如果是 $\dfrac{1+\sqrt{1-4x}}{2x}$，则不能够消除 $\dfrac{1}{2x}$ 的 $1$ 的常数项，因此根为 $\dfrac{1-\sqrt{1-4x}}{2x}$。
 
 故，$F(x)$ 的封闭形式为：
 $$
@@ -1352,26 +1348,6 @@ $$
 其中，$A(x)$ 是序列 $a$ 的生成函数，$G(x)$ 是有限序列 $g$ 的生成函数，满足 $|g|\leq k$。
 
 ### 从生成函数的封闭形式求解通项公式
-
-#### 通法
-
-只讨论序列 $f$ 的生成函数为 $F(x)=\dfrac{\large1}{\large \sum\limits_{i=0}^ka_ix^i}$ 的形式。
-
-不妨令 $\large \sum\limits_{i=0}^ka_ix^i=\prod\limits_{i=0}^t(1-p_ix)^{k_i}$，满足 $\large \sum\limits_{i=0}^tk_i=k$。
-
-构造 $A_{i,j}$，则通过待定系数法可以解得：
-
-$$
-\dfrac{\large1}{\large \sum\limits_{i=0}^ka_ix^i}=\Large\sum_{i=0}^t\sum_{j=1}^{k_i}\large\frac{A_{i,j}}{(1-p_ix)^j}
-$$
-
-考虑到：
-
-$$
-\large \sum\limits_{i=0}^\infty\dbinom{n-1+i}{i}p^ix^i=\dfrac{1}{(1-px)^n}
-$$
-
-
 
 #### Fibonacci 数列通项公式
 
@@ -1409,17 +1385,288 @@ b=\dfrac{1-\sqrt5}{2}\\
 \end{cases}
 $$
 
+所谓“通项公式”，其实就是生成函数中 $x^n$ 项的系数。
+
+因此我们需要将生成函数 $F(x)$ 转换为形式幂级数形式。
+
+考虑将 $\dfrac{A}{1-ax},\dfrac{B}{1-bx}$ 转换为形式幂级数形式：
+
+$$
+\begin{aligned}
+\frac{A}{1-ax}&=A\cdot \frac{1}{1-ax}\\
+&=A\sum_{n=0}^\infty a^nx^n
+\end{aligned}
+$$
+
+同理，$\dfrac{B}{1-bx}=B{\Large \sum\limits_{\normalsize n=0}^{\normalsize\infty}} b^nx^n$。
+
 则：
 
 $$
 \begin{aligned}
-F(x)&=\frac{x}{1-x-x^2}\\
-&=\dfrac{\dfrac{1}{\sqrt5}}{1-\dfrac{1+\sqrt5}{2}\cdot x}\cdot\dfrac{-\dfrac{1}{\sqrt5}}{1-\dfrac{1-\sqrt5}{2}\cdot x}\\
-&=
+F(x)&=\frac{a}{1-ax}+\frac{b}{1-bx}\\
+&=A\sum_{n=0}^\infty a^nx^n+B\sum_{n=0}^\infty b^nx^n\\
+&=\sum_{n=0}^\infty\left(A\cdot a^n+B\cdot b^n\right)x^n
 \end{aligned}
 $$
 
-又因为
-$$
+代入 $A,B,a,b$ 的值，可得：
 
 $$
+F(x)=\sum_{n=0}^\infty \frac{1}{\sqrt5}\left[\left(\frac{1+\sqrt5}{2}\right)^n-\left(\frac{1-\sqrt5}{2}\right)^n\right] x^n
+$$
+
+则，通项公式为：
+
+$$
+f_n=\frac{1}{\sqrt5}\left[\left(\frac{1+\sqrt5}{2}\right)^n-\left(\frac{1-\sqrt5}{2}\right)^n\right]
+$$
+
+#### 总结
+
+1. 求出生成函数封闭形式。
+2. 通过待定系数法列方程，将原本的封闭形式划分为若干个部分。
+3. 将若干个部分转换为形式幂级数形式。
+4. 合并答案。
+
+其实就是一个减小规模的过程，因为直接转换初始的 $F(x)$ 不那么简单。
+
+## 指数生成函数
+
+指数生成函数用于处理**排列问题**。
+
+定义序列 $a_1,a_2,a_3,\cdots,a_n,\cdots$ 的指数生成函数为**形式幂级数**：
+
+$$
+G(x)=\sum_{n=0}^\infty a_n\cdot\frac{x^n}{n!}
+$$
+
+由于很多部分都是与[普通生成函数](#普通生成函数)类似的，故不再做解释。此部分仅解释不同之处。
+
+### 阶乘分母
+
+对于 $G(x)$ 中的 $\dfrac{x^n}{n!}$，其表示的是某个元素出现了 $n$ 次。
+
+但是，在不同位置出现的会重复计算，因此应当除以 $n!$。
+
+### $e^x$ 的泰勒展开式
+
+在高等数学中，对于 $e^x$ 有：
+
+$$
+\begin{aligned}
+e^x&=1+\frac{x}{1!}+\frac{x^2}{2!}+\frac{x^3}{3!}+\cdots+\frac{x^n}{n!}+\cdots\\
+&=\sum_{n=0}^\infty\frac{x^n}{n!}
+\end{aligned}
+$$
+
+对于 $e^{-x}$ 有：
+
+$$
+\begin{aligned}
+e^{-x}&=1-\frac{x}{1!}+\frac{x^2}{2!}-\frac{x^3}{3!}+\cdots+\frac{x^n}{n!}-\frac{x^{n+1}}{(n+1)!}+\cdots\\
+&=\sum_{n=0}^\infty\frac{(-x)^n}{n!}
+\end{aligned}
+$$
+
+可以很明显的发现，**这与指数生成函数存在相似之处**。
+
+事实上，这也是其命名的由来。
+
+还有：
+
+$$
+\begin{aligned}
+1+\frac{x^2}{2!}+\frac{x^4}{4!}+\cdots&=\frac{e^x+e^{-x}}{2}\\
+\frac{x}{1!}+\frac{x^3}{3!}+\frac{x^5}{5!}+\cdots&=\frac{e^x-e^{-x}}{2}
+\end{aligned}
+$$
+
+**在指数生成函数运算过程中，请牢记以上公式**。
+
+### 乘法运算
+
+指数生成函数的乘法需要另行讨论。
+
+对于两个序列 $\langle a_1,a_2,a_3,\cdots,a_n,\cdots\rangle,\langle b_1,b_2,b_3,\cdots,b_n,\cdots\rangle$，设其指数生成函数分别为 $A(x),B(x)$。
+
+则：
+
+$$
+A(x)\cdot B(x)=\sum_{i=0}^\infty a_i\cdot\frac{x^i}{i!}\sum_{j=0}^\infty b_j\cdot\frac{x^j}{j!}
+$$
+
+同[普通生成函数的多项式卷积](#乘法 多项式卷积)，这也无法计算，于是令 $n=i+j$。
+
+则：
+
+$$
+\begin{aligned}
+A(x)\cdot B(x)&=\sum_{n=0}^\infty\sum_{i=0}^n\left(a_i\cdot\frac{x^i}{i!}\right)\left(b_{n-i}\cdot\frac{x^{n-i}}{(n-i)!}\right)\\
+&=\sum_{n=0}^\infty\sum_{i=0}^na_ib_{n-i}\cdot\frac{x^n}{i!(n-i)!}\\
+&=\sum_{n=0}^\infty\frac{x^n}{n!}\sum_{i=0}^na_ib_{n-i}\cdot\frac{n!}{i!(n-i)!}\\
+&=\sum_{n=0}^\infty\left(\sum_{i=0}^n\binom{n}{i}a_ib_{n-i}\right)\frac{x^n}{n!}\\
+\end{aligned}
+$$
+因此，$A(x)\cdot B(x)$ 是序列 $\left\langle\sum\limits_{i=0}^n\binom{n}{i}a_ib_{n-i}\right\rangle$ 的**指数**生成函数。
+
+### 一道例题
+
+求 $1,3,5,7,9$ 这五个数字组成的 $n$ 位数的个数，要求其中 $3,7$ 出现的次数为**偶数**，其它数字出现的次数不加限制。
+
+定义函数 $G_1(x),G_3(x),G_5(x),G_7(x),G_9(x)$，分别表示其出现次数序列的指数生成函数。
+
+对于 $3,7$ 只能出现偶数次，有：
+
+$$
+\begin{aligned}
+G_3(x)=G_7(x)&=1+\frac{x^2}{2!}+\frac{x^4}{4!}+\frac{x^6}{6!}+\cdots\\
+&=\frac{e^x+e^{-x}}{2}
+\end{aligned}
+$$
+
+对于 $1,5,9$，有：
+
+$$
+\begin{aligned}
+G_1(x)=G_5(x)=G_9(x)&=1+\frac{x}{1!}+\frac{x^2}{2!}+\frac{x^3}{3!}+\cdots\\
+&=e^x
+\end{aligned}
+$$
+
+设满足条件的 $n$ 位数的个数未 $a_n$，则 $\langle a_n\rangle$ 的指数生成函数为 $G(x)$。
+
+则：
+
+$$
+\begin{aligned}
+G(x)&=G_1(x)\cdot G_3(x)\cdot G_5(x)\cdot G_7(x)\cdot G_9(x)\\
+&=\left(e^x\right)^3\left(\frac{e^x+e^{-x}}{2}\right)^2\\
+&=e^{3x}\cdot\frac{e^{2x}+2+e^{-2x}}{4}\\
+&=\frac{e^{5x}+2e^{3x}+e^x}{4}
+\end{aligned}
+$$
+
+考虑到：
+$$
+\begin{cases}
+\begin{aligned}
+e^{5x}&=\sum_{n=0}^\infty\frac{(5x)^n}{n!}\\
+&=\sum_{n=0}^\infty\frac{5^nx^n}{n!}\\
+e^{3x}&=\sum_{n=0}^\infty\frac{(3x)^n}{n!}\\
+&=\sum_{n=0}^\infty\frac{3^nx^n}{n!}\\
+e^x&=\sum_{n=0}^\infty\frac{x^n}{n!}\\
+\end{aligned}
+\end{cases}
+$$
+代入原式：
+
+$$
+\begin{aligned}
+G(x)&=\dfrac{\large \sum\limits_{\normalsize n=0}^{\normalsize \infty}\normalsize\dfrac{5^nx^n}{n!}
++
+2\large \sum\limits_{\normalsize n=0}^{\normalsize \infty}\normalsize\dfrac{3^nx^n}{n!}
++
+\large \sum\limits_{\normalsize n=0}^{\normalsize \infty}\normalsize\dfrac{x^n}{n!}}{4}\\
+&=\dfrac{\large\sum\limits_{\normalsize n=0}^{\normalsize\infty}\normalsize\dfrac{\left(5^n+2\times3^n+1\right)x^n}{n!}}{4}\\
+&=\sum_{n=0}^\infty\left(\frac{5^n+2\times3^n+1}{4n!}\right)x^n
+\end{aligned}
+$$
+则答案 $a_n=\dfrac{5^n+2\times 3^n+1}{4n!}$。
+
+### 总结
+
+* 指数生成函数运算时，需要牢记 $e^x$ 与形式幂级数之间的转换关系。
+
+* 乘法运算相比普通生成函数多了一个组合数。
+* 需要注意什么时候（排列问题）应当使用指数生成函数。
+
+## 多项式系数
+
+已知多项式 $\left(\sum\limits_{i=1}^ma_i\right)^n$ 的展开式，则其 $a_1^{n_1}a_2^{n_2}a_3^{n_3}\cdots a_{m}^{n_m}$ 项的**系数**为：
+
+$$
+\binom{n}{n_1}\binom{n-n_1}{n_2}\binom{n-n_1-n_2}{n_3}\cdots\binom{n-n_1-n_2-\cdots-n_{m-1}}{n_m}=\dfrac{n!}{n_1!n_2!n_3!\cdots n_m!}
+$$
+
+## 分拆数
+
+将一个正整数 $n$ 分为若干个个正整数相加，即令 $n$ 表示为 $n=a_1+a_2+a_3+\cdots+a_k$，满足 $a_i\geq1$。
+
+交换 $a_i,a_j$ 的顺序不影响答案（这是一个组合问题），因此为了便于分析不妨令 $a_1\geq a_2\geq a_3\geq\cdots\geq a_k$。
+
+### $k$ 部分分拆数
+
+将 $n$ 划分为 $k$ 个部分的拆分数，称为“$k$ 部分拆分数”，方案数记作 $p(n,k)$。
+
+#### 解法一
+
+> 这是教的时候教的做法，也是资料上的。
+
+显然，$p(n,k)$ 即下列方程的非负整数解组的个数：
+
+$$
+n-k=b_1+b_2+b_3+\cdots+b_k
+$$
+满足 $b_1\geq b_2\geq b_3\geq \cdots\geq b_k\geq 0$。
+
+假设在 $b_1,b_2,b_3,\cdots,b_k$ 中，有 $m$ 个数大于 $0$。
+
+即：
+
+$$
+b_1\geq b_2\geq b_3\geq\cdots\geq b_{k'}>b_{k'+1}=b_{k'+2}=\cdots=b_k=0
+$$
+
+因此有和式：
+
+$$
+p(n,k)=\sum_{m=0}^k p(n-k,m)
+$$
+
+解释：$n-k$ 代表给 $k$ 个部分都**预先分配一个 $1$** 防止$a_i=0$，随后将其划分为 $m$ 个大于 $0$ 的部分即可。
+
+相邻两个和式作差，化简得：
+
+$$
+p(n,k)=p(n-1,k-1)+p(n-k,k)
+$$
+~~虽然我并不知道如何化简。~~
+
+#### 解法二
+
+> 自己想的。
+
+考虑将 $n$ 划分为 $k$ 个部分时，**最小**部分可能的取值。
+
+1. 取 $1$。
+2. 取 $2$ 以上的正整数。
+
+如果是第一种情况，方案数为 $p(n-1,k-1)$，即将 $n-1$ 划分为 $k-1$ 个部分，再加上这个 $1$。
+
+否则对于第二种情况，先给每一个部分都分配一个 $1$，然后将 $n-k$ 划分为 $k$ 个部分再加上即可。
+
+即：
+
+$$
+p(n,k)=p(n-1,k-1)+p(n-k,k)
+$$
+
+### 生成函数
+
+令 $p_n$ 表示正整数 $n$ 的拆分数目。
+
+则：
+
+$$
+p_n=\sum_{i=1}^n p(n,i)
+$$
+
+那么，分拆数数目 $p_n$ 的生成函数为：
+$$
+\begin{aligned}
+G(x)&=1+p_1x+p_2x^2+p_3x^3+\cdots\\
+&=\frac{1}{1-x}\cdot\frac{1}{1-x^2}\cdot\frac{1}{1-x^3}\cdot\cdots
+\end{aligned}
+$$
+解释：
