--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "数论学习笔记"
+title: "数论数学学习笔记"
 subtitle: "乘法逆元 同余方程"
 date: 2025-2-5
 author: "TH911"
@@ -10,11 +10,21 @@ tags:
   - 数学
   - 未完
 words:
+  - 求和
+  - 求乘积
+  - 和式
+  - 级数
+  - 同余
+  - 模运算
+  - 阶乘
+  - 求导数
+  - 导数运算法则
+  - 中国剩余定理 CRT
 ---
 
 > [参考资料](/file/2025/02/数学.pdf)
 
-# 数论基础
+# 基础部分
 
 ## 符号
 
@@ -34,5 +44,44 @@ words:
 * $a\equiv b\pmod p$：$a,b$ 关于 $p$ 同余。
 
   即：$a\bmod p=b\bmod p$。
+
+## 运算
+
+### 求导运算
+
+求导表示的是**变化率**。可以理解为“瞬时速度”（位移的变化率）。
+
+> 导数可以理解为变化率，就像速度是位移的变化率。~~—— DeepSeek~~
+
+若 $a=b$，则 $a,b$ 导数相等。
+
+#### 记号
+
+$x$ 的导数记作：$(x)'$。
+
+$x$ 是什么（函数、多项式等）见下文。
+
+#### 多项式求导
+
+对于多项式 $x$，当 $\alpha\ne0$ 的时候，有 $x^\alpha$ 的导数 $\left(x^\alpha\right)'=\alpha\cdot x^{\alpha-1}$。
+
+需要注意的是，$\left(x^\alpha\right)'\ne\left[\left(x^\alpha\right)^1\right]'$。
+
+#### 函数求导运算法则
+
+给定函数 $f(x),g(x)$。定义其求导后结果分别为 $f'(x),g'(x)$。
+
+$$
+\left[f(x)\pm g(x)\right]'=f'(x)\pm g'(x)\\
+\left[f(x)\cdot g(x)\right]'=f'(x)\cdot g(x)+f(x)\cdot g'(x)\\
+\left[\frac{f(x)}{g(x)}\right]'=\frac{f'(x)g(x)-f(x)g'(x)}{g^2(x)}\\
+\left[f(g(x))\right]'=f'(g(x))\cdot g'(x)
+$$
+
+需要注意的是，求形如 $(1-x)^2$ 的导数时，应当为 $(x-1)^2$ 的导数。
+
+即：$$\left[(1-x)^2\right]'=\left[(x-1)^2\right]'=2(x-1)$$。
+
+或者：$$\left[(1-x)^2\right]'=-1\times2(1-x)=2(x-1)$$。
 
 # 中国剩余定理
