--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -20,8 +20,6 @@ words:
   - 加法原理
   - 乘法原理
   - 加乘原理
-  - 
-问题
   - 生成函数
   - 题解：洛谷P3807
   - 题解：卢卡斯定理/Lucas 定理
@@ -34,12 +32,15 @@ words:
 1. 扩展 Lucas 定理的代码
 2. 排序生成算法：序数法、字典序法、换位法
 3. 格路问题
-4. 分拆数问题 Ferrers 图
-5. Stirling 数
-6. Catalan 数
-7. 牛顿二项式定理
-8. 容斥原理
-9. 莫比乌斯变换
+4. Catalan 数
+5. **Stirling 数**
+6. 牛顿二项式定理
+7. 容斥原理
+8. 莫比乌斯变换
+9. 鸽巢原理
+10. 分拆数的五边形数定理
+11. 恰好 $k$ 部分分拆数与至多 $k$ 部分分拆数
+12. 分拆数的边界
 
 # 排列与组合
 
@@ -234,16 +235,16 @@ $$
 * 盒：是否有区别
 * 盒：是否能为空
 
-| 球有无区别 | 盒有无区别 | 盒能否为空 | 方案数 | 注释 |
-| :-----: | :----: | :-----: | :-----: | :-----: |
-| 有 | 有 |能|$m^n$| 每个球都有 $m$ 种选择 |
-| 有 | 有 |否|$m!\begin{Bmatrix}n\\m\end{Bmatrix}$| 第二类 Stirling 数的一点改动 |
-| 有 | 无 |能|$\sum\limits_{i=1}^{\min(n,m)}\begin{Bmatrix}n\\i\end{Bmatrix}$| 第二类 Stirling 数对所有可能非空盒数求和。 |
-| 有 | 无 |否|$\begin{Bmatrix}n\\m\end{Bmatrix}$| 第二类 Stirling 数 |
-| 无 | 有 |能|$\dbinom{n+m-1}{n}$| 从 $m$ 个盒中选择 $n$ 个来放入球，可重复 |
-| 无 | 有 |否|$\dbinom{n-1}{m-1}$| 插空法：$n$ 个球摆好，将 $m-1$ 个挡板插入 $n-1$ 个空即可 |
-| 无 | 无 |能|$\left[x^n\right]G(x)=\frac{1}{(1-x)(1-x^2)\cdots(1-x^m)}$| 将 $n$ 个球分为 $1,2,3,\cdots,m$ 个非空部分，即分拆数。 |
-| 无 | 无 |否|$\left[x^n\right]G(x)=\frac{x^m}{(1-x)(1-x^2)\cdots(1-x^m)}$| 将 $n$ 个球分为 $m$ 个非空部分，即分拆数。 |
+| 球有无区别 | 盒有无区别 | 盒能否为空 |                            方案数                            |                             注释                             |
+| :--------: | :--------: | :--------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
+|     有     |     有     |     能     |                            $m^n$                             |                   每个球都有 $m$ 种选择。                    |
+|     有     |     有     |     否     |             $m!\begin{Bmatrix}n\\m\end{Bmatrix}$             |                第二类 Stirling 数的一点改动。                |
+|     有     |     无     |     能     | $\sum\limits_{i=1}^{\min(n,m)}\begin{Bmatrix}n\\i\end{Bmatrix}$ |          第二类 Stirling 数对所有可能非空盒数求和。          |
+|     有     |     无     |     否     |              $\begin{Bmatrix}n\\m\end{Bmatrix}$              |                     第二类 Stirling 数。                     |
+|     无     |     有     |     能     |                     $\dbinom{n+m-1}{n}$                      |          从 $m$ 个盒中选择 $n$ 个来放入球，可重复。          |
+|     无     |     有     |     否     |                     $\dbinom{n-1}{m-1}$                      |  插空法：$n$ 个球摆好，将 $m-1$ 个挡板插入 $n-1$ 个空即可。  |
+|     无     |     无     |     能     |  $\left[x^n\right]G(x)=\frac{1}{(1-x)(1-x^2)\cdots(1-x^m)}$  | 将 $n$ 个球划分为**至多** $m$ 个部分的方案数之和，即[分拆数](#生成函数)。 |
+|     无     |     无     |     否     | $\left[x^n\right]G(x)=\frac{x^m}{(1-x)(1-x^2)\cdots(1-x^m)}$ | 将 $n$ 个球分为**恰好** $m$ 个部分，即[分拆数](#生成函数)。  |
 
 #### 组合数的性质与求解
 
@@ -358,7 +359,7 @@ $$
 
 当模数为质数的时候计算逆元将除法改乘法后求解即可。
 
-其他方法见下文 [卢卡斯定理 Lucas 定理](#卢卡斯定理 Lucas 定理) 和 [扩展卢卡斯定理 exLucas 定理](#扩展卢卡斯定理 exLucas 定理)。
+其他方法见下文 [卢卡斯定理 Lucas 定理](#卢卡斯定理-lucas-定理) 和 [扩展卢卡斯定理 exLucas 定理](#扩展卢卡斯定理-exlucas-定理)。
 
 ### 排列或组合不存在
 
@@ -1496,7 +1497,7 @@ $$
 A(x)\cdot B(x)=\sum_{i=0}^\infty a_i\cdot\frac{x^i}{i!}\sum_{j=0}^\infty b_j\cdot\frac{x^j}{j!}
 $$
 
-同[普通生成函数的多项式卷积](#乘法 多项式卷积)，这也无法计算，于是令 $n=i+j$。
+同[普通生成函数的多项式卷积](#乘法-多项式卷积)，这也无法计算，于是令 $n=i+j$。
 
 则：
 
@@ -1597,7 +1598,14 @@ $$
 
 ### $k$ 部分分拆数
 
-将 $n$ 划分为 $k$ 个部分的拆分数，称为“$k$ 部分拆分数”，方案数记作 $p(n,k)$。
+将 $n$ 划分为 $k$ 个部分的分拆数，称为“$k$ 部分分拆数”，方案数记作 $p(n,k)$。
+
+则：
+
+$$
+p_n=\sum_{k=1}^np(n,k)
+$$
+
 
 #### 解法一
 
@@ -1644,7 +1652,7 @@ $$
 
 如果是第一种情况，方案数为 $p(n-1,k-1)$，即将 $n-1$ 划分为 $k-1$ 个部分，再加上这个 $1$。
 
-否则对于第二种情况，先给每一个部分都分配一个 $1$，然后将 $n-k$ 划分为 $k$ 个部分再加上即可。
+否则对于第二种情况，先给每一个部分都分配一个 $1$ 防止出现 $0$，然后将 $n-k$ 划分为 $k$ 个部分再加上即可。
 
 即：
 
@@ -1652,9 +1660,13 @@ $$
 p(n,k)=p(n-1,k-1)+p(n-k,k)
 $$
 
-### 生成函数
+注意此处之所以不是 $p(n-k,k-1)$ 而是 $p(n-1,j-1)$，是因为只考虑第 $k$ 项的取值，前面的会在递归或递推中考虑，不然会重复计数。
 
-令 $p_n$ 表示正整数 $n$ 的拆分数目。
+#### 生成函数
+
+<span style="color:red;">注意：所有分拆数的生成函数的起始位置都是 $1$，而不是 $0$，因为不能划分为 $0$ 个部分。</span>
+
+令 $p_n$ 表示正整数 $n$ 的分拆数目。
 
 则：
 
@@ -1663,10 +1675,251 @@ p_n=\sum_{i=1}^n p(n,i)
 $$
 
 那么，分拆数数目 $p_n$ 的生成函数为：
+
 $$
 \begin{aligned}
 G(x)&=1+p_1x+p_2x^2+p_3x^3+\cdots\\
 &=\frac{1}{1-x}\cdot\frac{1}{1-x^2}\cdot\frac{1}{1-x^3}\cdot\cdots
 \end{aligned}
 $$
-解释：
+
+至多划分为 $k$ 个部分的数目为：
+$$
+\left[x^n\right]G(x)=\frac{1}{(1-x)(1-x^2)\cdots(1-x^k)}
+$$
+恰好划分为 $k$ 个部分的数目为：
+$$
+\left[x^n\right]G(x)=\frac{x^k}{(1-x)(1-x^2)\cdots(1-x^k)}
+$$
+$k$ 部分分拆数 $p(n,k)$ 的生成函数为：
+
+$$
+\sum_{n,k\geq0}p(n,k)x^ny^k=\prod_{i=1}^\infty\frac{1}{1-x^iy}
+$$
+
+#### Ferrers 图
+
+所谓 Ferrers 图，其实就是将分拆数分拆出的每一个部分都用一行若干个点表示。
+
+具体而言，将整数 $n$ 拆分为 $k$ 个部分 $a_1,a_2,a_3,\cdots,a_k$，则对应的 Ferrers 图中第一行有 $a_1$ 个点，第二行有 $a_2$ 个点，第三行有 $a_3$ 个点……第 $k$ 行有 $a_k$ 个点。
+
+比如：将 $12$ 分拆为 $12=5+4+2+1$，$n=12,k=4$
+
+![](/img/2025/02/004.svg)
+
+将其沿**主对角线**（左上至右下）翻转：
+
+![](/img/2025/02/005.svg)
+
+可以发现，这就等同于将 $12$ 分拆为了 $12=4+3+2+2+1$。
+
+而第一行对应原图中的第一列，考虑到分拆数不能拆出 $0$，因此原图中的 $k$ 行每行都是存在的，那么新图中第一行（也是最长的一行）的长度就是 $k$。
+
+即：新图对应的分拆方案中最大的部分为 $k$。
+
+也就是说，**$k$ 部分分拆数等同于最大 $k$ 分拆数**，均为 $p(n,k)$。
+
+##### 最大 $k$ 分拆数
+
+等同于 $k$ 部分分拆数。
+
+### 互异分拆数
+
+令 $pd_n$ 表示 $n$ 个各部分互不相同的分拆方案数。
+
+#### $k$ 部分互异分拆数
+
+将 $n$ 划分为 $k$ 个互不相同的部分的分拆数，称为“$k$ 部分互异分拆数”，方案数记作 $pd(n,k)$。
+
+则：
+
+$$
+pd_n=\sum_{k=1}^npd(n,k)
+$$
+
+
+#### 解法一
+
+同[上文解法一](#解法一)，$pd(n,k)$ 即下列方程的非负整数解的个数：
+$$
+n-k=b_1+b_2+b_3+\cdots+b_k
+$$
+满足 $b_1>b_2>b_3>\cdots>b_k\geq 0$。
+
+则只有 $b_k$ 可能取 $0$。
+
+当 $b_k=0$ 时，方案数为 $pd(n-k,k-1)$。
+
+否则，方案数为 $pd(n-k,k)$。
+
+即：
+
+$$
+pd(n,k)=pd(n-k,k-1)+pd(n-k,k)
+$$
+
+
+#### 伪·解法二
+
+其实和上面那一种一样……
+
+本部分仅仅是为了解释为什么不同[上文解法二](#解法二)一样思考、递推，自己推一下就能发现。
+
+#### 生成函数
+
+互异分拆数的生成函数为：
+
+$$
+\prod_{i=1}^\infty\left(x^0+x^i\right)=\prod_{i=1}^\infty\left(1+x^i\right)
+$$
+
+对于每一个正整数 $i$，都存在两种选择：包含在方案中（$x^i$）和不包含在方案中（$x^0$）。
+
+### 奇分拆数
+
+令 $po_n$ 表示将 $n$ 拆分为若干个部分，且各部分均为**奇数**的分拆方案数。
+
+#### 生成函数
+
+奇分拆数的生成函数为：
+
+$$
+\prod_{k=1}^\infty\sum_{i=0}^\infty x^{i(2k-1)}=\prod_{k=1}^\infty\frac{1}{1-x^{2k-1}}
+$$
+
+因为对于每一个奇数 $2k-1$，都可能出现在分拆中 $i$ 次。
+
+#### 等价问题
+
+考虑到：
+
+$$
+\prod_{i=1}^\infty\left(1+x^i\right)=\frac{\prod\limits_{i=1}^\infty\left(1-x^{2i}\right)}{\prod\limits_{i=1}^\infty\left(1-x^i\right)}=\prod_{i=1}^\infty\frac{1}{1-x^{2i-1}}
+$$
+
+最左侧是互异分拆数的生成函数，最右侧即奇拆分数的生成函数。
+
+那么：$po_n=pd_n$。
+
+**由于 $k$ 部分奇分拆数过于复杂~~基本用不上且我不会~~，不予展示。**
+
+## Fibonacci 数列 斐波那契数列
+
+### 定义
+
+最规范的定义是 $f_0=0,f_1=1$，当 $n\geq2$ 时 $f_n=f_{n-1}+f_{n-2}$，此处也采用这种。
+
+否则会在一些细节上不同。
+
+### 通项公式
+
+$$
+f_n=\frac{1}{\sqrt5}\left[\left(\frac{1+\sqrt5}{2}\right)^n-\left(\frac{1-\sqrt5}{2}\right)^n\right]
+$$
+
+推导见[此处](#fibonacci-数列通项公式)。
+
+当然，不难发现 $\dfrac{1-\sqrt5}{2}<0$，那么在公式中就是**以指数级的速度减小**。
+
+记 $[x]$ 表示离 $x$ 最近的整数。
+
+则：
+
+$$
+f_n=\left[\frac{\left(\frac{1+\sqrt5}{2}\right)^n}{\sqrt5}\right]
+$$
+
+
+### 性质
+
+1. 卡西尼性质：$f_{n-1}f_{n+1}-f_n^2=(-1)^n$。
+2. 附加性质：$f_{n+k}=f_kf_{n+1}+f_{k-1}n$。
+3. 取第二条性质中 $k=n$，则 $f_{2n}=f_nf_{n+1}+f_{n-1}f_n$。
+4. 由第三条性质归纳可得，$\forall k\in\N,f_n\mid f_{nk}$。
+5. 第四条性质可逆，即 $\forall f_a\mid f_b,a|b$。
+6. $\gcd(f_m,f_n)=f_{\gcd(m,n)}$。
+7. 以 $f_i,f_{i+1}$ 为输入会使欧几里得算法的复杂度达到最坏情况（具体参见[维基 - 拉梅](https://en.wikipedia.org/wiki/Gabriel_Lamé)）。
+
+## Stirling 数 斯特林数
+
+<details class="note">
+    <summary>为什么优先介绍第二类 Stirling 数</summary>
+    <p>
+        因为第二类 Stirling 数更常用，且在其本人的著作中也是优先介绍第二类 Stirling 数
+    </p>
+</details>
+
+### 第二类 Stirling 数
+
+第二类 Stirling 数表示的是将 $n$ 个不同的元素划分为 $k$ 个互不区分的非空子集的方案数，记为 $\begin{Bmatrix}n\\k\end{Bmatrix}$，也可记作 $S(n,k)$。
+
+<details class="note">
+    <summary>第二类 Stirling 数的 $\KaTeX$ 输入</summary>
+    <p>
+        $\begin{Bmatrix}n\\k\end{Bmatrix}$ 的代码：
+    </p>
+    <p>
+        <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code><div class="table-responsive"><table class="rouge-table table"><tbody><tr><td class="rouge-gutter gl"><pre class="lineno">1
+2
+3
+4
+</pre></td><td class="rouge-code"><pre>\begin{Bmatrix}
+n\\
+k
+\end{Bmatrix}
+</pre></td></tr></tbody></table></div></code></pre></div></div>
+    </p>
+</details>
+#### 递推式
+
+在划分一个新元素时，存在两种情况：
+
+* 将新元素单独划分，方案数：$\begin{Bmatrix}n-1\\k-1\end{Bmatrix}$。
+* 放入现有的 $k$ 个子集，方案数：$k\begin{Bmatrix}n-1\\k\end{Bmatrix}$。
+
+则总方案数为：
+$$
+\begin{Bmatrix}
+n\\
+k
+\end{Bmatrix}
+=
+\begin{Bmatrix}
+n-1\\
+k-1
+\end{Bmatrix}
++
+k
+\begin{Bmatrix}
+n-1\\
+k
+\end{Bmatrix}
+$$
+
+边界：
+
+$$
+\begin{Bmatrix}
+n\\
+0
+\end{Bmatrix}
+=[n=0]
+$$
+
+#### 通项公式
+
+$$
+\begin{Bmatrix}n\\k\end{Bmatrix}=\sum_{i=0}^k\frac{(-1)^{k-i}i^n}{i!(k-i)!}
+$$
+
+证明：参见[OI Wiki](https://oi-wiki.org/math/combinatorics/stirling/#%E9%80%9A%E9%A1%B9%E5%85%AC%E5%BC%8F)。
+
+#### 同一行的第二类 Stirling 数计算
+
+即 $n$ 确定，求 $\begin{Bmatrix}n\\0\end{Bmatrix},\begin{Bmatrix}n\\1\end{Bmatrix},\begin{Bmatrix}n\\2\end{Bmatrix},\cdots$。
+
+根据通项公式**卷积**计算即可。
+
+#### 同一列的第二类 Stirling 数计算
+
+即 $k$ 确定，求 $\begin{Bmatrix}0\\k\end{Bmatrix},\begin{Bmatrix}1\\k\end{Bmatrix},\begin{Bmatrix}2\\k\end{Bmatrix},\cdots$。
