--- a/_posts/2025-02-08-1.md
+++ b/_posts/2025-02-08-1.md
@@ -29,7 +29,7 @@ words:
 那么，转移就有：
 
 $$
-a_{i,j,k}=\lor_{w=1}^na_{i,w,k-1}\land a_{w,j,k-1}
+a_{i,j,k}=\bigvee_{w=1}^na_{i,w,k-1}\and a_{w,j,k-1}
 $$
 
 其中，$\lor$ 表示或运算，$\land$ 表示与运算。
